# rs

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  author.compose.yml  build.py  build.sh  db.compose.yml  docker-bake.hcl  docker-compose.override.yml  docker-compose.override.yml.sample  docker-compose.yml  dstart  init_runestone.sh  pi_chat_logs.csv  pyproject.toml  sample.env  workspace.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: book_request.md  bug_report.md  config.yml  feature_request.md  lti-support.md  new_book_request.md
.github/workflows/: lint.yml  test-crud.yml
bases/rsptx/admin_server_api/: README.md  __init__.py  core.py
bases/rsptx/assignment_server_api/: __init__.py  core.py  localconfig.py
bases/rsptx/author_server_api/: IMPLEMENTATION_INSTRUCTIONS.md  __init__.py  git_utils.py  main.py  worker.py
bases/rsptx/book_server_api/: __init__.py  __main__.py  localconfig.py  main.py  runestone_dev.db  telemetry.py
bases/rsptx/dash_server_api/: __init__.py  core.py
bases/rsptx/interactives/: .gitignore  .prettierignore  CONTRIBUTING.rst  I18N.md  __init__.py  index.rst  package-lock.json  package.json  pavement.py  ptxrs-bootstrap.less  tsconfig.json  vitest.config.js  webpack.config.js  webpack.index.js
bases/rsptx/library_server/: __init__.py  core.py
bases/rsptx/rsmanage/: __init__.py  core.py
bases/rsptx/web2py_server/: README.md  VERSION  __init__.py  parameters_8000.py  tickets2db.py
books/tickets/: 172.19.0.1.2026-02-12.15-12-58.b98bdb1d-7191-4636-ad0c-b4c10e5f9fc9  172.19.0.1.2026-02-12.15-13-01.3193c734-be0c-4ff5-92f5-5374d4587bb2  172.19.0.1.2026-02-12.15-13-32.3b54de7e-e58b-4129-869e-51b9acbfd97e  172.19.0.1.2026-02-16.04-47-00.c53222e2-8c04-4993-855d-f5ddae0902cf  172.19.0.1.2026-02-16.04-47-06.d2423c10-ca89-4617-8777-e2787c37c43d  172.19.0.1.2026-02-16.05-22-50.f070be34-3340-4d7b-a682-5b650d508697  172.19.0.1.2026-02-16.05-45-17.b6c868a8-2b5f-4ce8-8d65-e162f7604fda
components/rsptx/analytics/: __init__.py  core.py
components/rsptx/auth/: __init__.py  email.py  session.py
components/rsptx/build_tools/: __init__.py  add_github_links.py  build.py  build_books.py  build_mon.py  check-db-migrations.sh  cleanup_docker.sh  core.py  notifications.py  run_migrations.py  traceback_monitor.py
components/rsptx/cl_utils/: __init__.py  core.py
components/rsptx/configuration/: __init__.py  core.py
components/rsptx/data_extract/: __init__.py  anonymizeCourseData.py
docs/: Makefile
docs/graffle/: Phased Approach to Polylith.graffle
docs/source/: addbook.rst  assignment_builder.rst  book_server_api.core.rst  book_server_api.localconfig.rst  book_server_api.main.rst  book_server_api.routers.assessment.rst  book_server_api.routers.auth.rst  book_server_api.routers.books.rst  book_server_api.routers.coach.rst  book_server_api.routers.discuss.rst  book_server_api.routers.rslogging.rst  book_server_api.routers.rst  book_server_api.rst  building_servers.rst  cl_utils.rst  conf.py  configuration.core.rst  configuration.rst  contributing.rst  custom_book.rst  database.rst  db.async_session.rst  db.core.rst  db.crud.rst  db.rst  debugging.rst  developing.rst  docker.rst  docroadmap.rst  environmental_vars.rst  index.rst  javascript_feature.rst  left_to_merge.rst  logging.applogger.rst  logging.core.rst  logging.rst  modules.rst  new_language.rst  poetry.rst  production.rst  (+16 more)
migrations/: env.py
migrations/versions/: 086c3f46d8af_add_invoice_amount.py  143b0d688a8f_add_last_deploy_to_library.py  29cd2a46600d_owner_and_editdist.py  2b77aa7142f6_lti1p3_tables.py  2db61c1550a2_add_allowlink_column.py  37b73c74eebe_source_code_table_filename.py  3bfddd662428_merge_library_and_async_mode_heads.py  3dd5bafe949d_change_dnd_answers.py  4b544994f3da_add_apitoken_table.py  526d79dc9a8f_add_kind.py  5337b0616e8c_add_tags.py  65d7ca534d18_add_us_state.py  72b94339bbbb_add_library_columns.py  7aaca24437eb_create_baseline.py  8559d59ae185_add_matching_answers.py  865a6dbf6c09_add_telemetry_tables.py  8e9108d94e08_add_repo_path_to_library_model.py  8f857bdfef19_add_timezone_column.py  9a1c2b3d4e5f_add_owner_to_source_code.py  a1b2c3d4e5f6_add_created_and_visible_dates.py  a91c47d2e8b3_add_build_hooks_to_library.py  b209fe8b2841_add_domain_name_column_to_courses.py  b28d6db94abb_add_deadline_exceptions.py  b7f3c1a9d2e4_add_local_vars_to_traceback.py  c1d2e3f4a5b6_add_use_llm_to_assignment_questions.py  d8e4f2b6c1a7_default_async_mode_to_llm.py  f5db38d9355f_add_domain_approvals.py  fabe9802c36a_add_splice_answers.py  fada6d479f83_add_async_mode.py
projects/admin_server/: Dockerfile  pyproject.toml
projects/assignment_server/: Dockerfile  README.md  build.py  build.sh  pyproject.toml
projects/assignment_server/assignment_builder/: package-lock.json  package.json
projects/assignment_server/assignment_builder/public/: index.html
projects/assignment_server/assignment_builder/src/: App.css  App.js  componentFuncs.js
projects/author_server/: Dockerfile  README.md  gitconfig  pyproject.toml
projects/author_server/templates/: _base.html  anonymize_data.html  editlibrary.html  home.html
projects/book_server/: Dockerfile  Material_Bank.csv  README.md  check_compose_version.sh  pyproject.toml  stocks.txt
projects/caddy/: Caddyfile  Dockerfile  README.md
projects/dash_server/: Dockerfile  README.md  pyproject.toml
projects/interactives/: README.rst  build.py  make_release.sh  pyproject.toml
projects/jobe/: 000-jobe.conf  Dockerfile  README.md  container-test.sh  container.test.yml  license.txt  pyproject.toml
projects/latex_image/: Dockerfile  README
projects/library_server/: Dockerfile  pyproject.toml
projects/nginx/: Dockerfile  pyproject.toml  runestone
projects/nginx_dstart_dev/: Dockerfile  runestone  runestone.dev
projects/rsadmin/: README.md  alembic.ini  pyproject.toml
projects/rsmanage/: Dockerfile  pyproject.toml
projects/w2p_login_assign_grade/: Dockerfile  entrypoint.sh  pyproject.toml
test/: conftest.py
test/bases/: conftest.py
(+1381 files in other folders)
