# This is the Root pyproject.toml
# ===============================
#
# Poetry configuration
# --------------------
[tool.poetry]
name = "rs"
version = "7.0.1"
description = ""
authors = ["Brad Miller <bonelake@mac.com>"]
license = "MIT"
readme = "README.rst"

packages = [
    # These are the components for the author server
    { include = "development" },
    { include = "rsptx/data_extract", from = "components" },
    { include = "rsptx/visualization", from = "components" },
    { include = "rsptx/db", from = "components" },
    { include = "rsptx/forms", from = "components" },
    { include = "rsptx/auth", from = "components" },
    { include = "rsptx/logging", from = "components" },
    { include = "rsptx/response_helpers", from = "components" },
    { include = "rsptx/validation", from = "components" },
    { include = "rsptx/templates", from = "components" },
    { include = "rsptx/cl_utils", from = "components" },
    { include = "runestone", from = "bases/rsptx/interactives" },
    { include = "rsptx/author_server_api", from = "bases" },
    { include = "rsptx/book_server_api", from = "bases" },
    { include = "rsptx/web2py_server", from = "bases" },
    { include = "rsptx/rsmanage", from = "bases" },
    { include = "rsptx/assignment_server_api", from = "bases" },
    { include = "rsptx/dash_server_api", from = "bases" },
    { include = "rsptx/lp_sim_builder", from = "components" },
    { include = "rsptx/configuration", from = "components" },
    { include = "rsptx/exceptions", from = "components" },
    { include = "rsptx/build_tools", from = "components" },
    { include = "rsptx/practice", from = "components" },
    { include = "rsptx/interactives/scripts", from = "bases" },
    { include = "rsptx/lti1p3", from = "components" },
    { include = "rsptx/admin_server_api", from = "bases" },
]

[tool.poetry.dependencies]
python = "^3.10"

aiofiles = "^0.8.0"
aiohttp = "^3.11.11"
aioredis = "^2.0.1"
aiosqlite = "^0.18.0"
alembic = "^1.13.1"
altair = "^4.2.0"
asyncclick = "^8.1.3.4"
asyncpg = "^0.30.0"
beautifulsoup4 = "^4.0.0"
bleach = "^6.0.0"
boto3 = "^1.26.88"
botocore = "^1.29.87"
celery = "^5.2.7"
cryptography = "^3.0.0"
cssselect = ">= 1.0"
dash = { extras = ["celery", "diskcache"], version = "^2.7.0" }
diff-match-patch = ">= 20110725.1"
fastapi = "^0.115.0"
fastapi-login = "^1.10.0"
gunicorn = "^20.1.0"
ipyleaflet = "^0.19.2"
ipython = "^8.23.0"
Jinja2 = "^3.0.0"
jwcrypto = "^1.5.6"
lxml = "^5.0"
multi-await = "^1.0.4"
numpy = ">= 1.9.2"
oauth2 = ">=1.9"
pandas = {version = "^2.3.0", extras = ["pyarrow"]}
paver = "^1.3.4"
pgcli = "^3.5.0"
pretext = "^2.8.2"
psycopg2-binary = "^2.9.3"
pycryptodome = "^3.18.0"
pydal = ">=20230521.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.3"
pyhumps = "^3.8.0"
pyjwt = "^2.0.0"
pylint = ">= 1.2.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.5"
pytz = ">= 2016.6.1"
redis = "^4.3.4"
requests = "^2.28.1"
rich = "^13.3.5"
scikit-learn = "^1.5.1"
SQLAlchemy = "^2.0.0"
Starlette-WTF = "^0.4.3"
stripe = "^2.0.0"
toml = "^0.10.2"
tqdm = "^4.65.0"
uvicorn = "^0.27.0"
WTForms = "^3.0.0"
itsdangerous = "^2.2.0"
standard-asyncore = "^3.13.0"
standard-imghdr = "^3.13.0"
standard-cgi = "^3.13.0"
duckdb = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "~= 23.0"
CodeChat = "^1.9.3"
contextlib2 = "^0.6.0"
coverage = "^6.0.0"
coveralls = "^3.0.0"
flake8 = "^4.0.0"
html5validator = "^0.3.0"
isort = "^5"
mock = "^4.0.0"
mypy = "^1"
polling2 = "^0.5.0"
pytest = "^8.0.0"
pyvirtualdisplay = "^3.0.0"
pywin32 = { version = ">= 301", markers = "sys.platform == 'win32'" }
selenium = "^3.0.0"
runestone = { path = "./projects/interactives", develop = true }
rsmanage = { path = "./projects/rsmanage", develop = true }
json2xml = "^3.21.0"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.docs.dependencies]
sphinx-click = "^6.0.0"
Sphinx = "^5.0.0"
sphinx-reredirects = "^0.1.1"
sphinxcontrib-paverutils = "^1.18.1"
jupyter-sphinx = "<0.5"
jupyterlab = "^4.2.4"
jupyterlite-sphinx = "^0.9.3"
myst-parser = "^1.0.0"
cogapp = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
buildptx = "rsptx.interactives.scripts.buildptx:build_book"
build = "rsptx.build_tools.build:cli"

# isort configuration
# -------------------
# See the [docs](https://pycqa.github.io/isort/docs/configuration/black_compatibility.html).
[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["__pycache__", ".git", ".tox", ".venv", "build", "dist", "docs", "htmlcov", "node_modules", "venv"]

[tool.ruff.lint]
ignore = ["E501"]
