[tool.poetry]
name = "admin_server"
version = "0.1.0"
description = ""
authors = ['Brad Miller <bonelake@mac.com>']
license = "MIT"

packages = [
  { include = "rsptx/admin_server_api", from = "../../bases" },
  { include = "rsptx/auth", from = "../../components" },
  { include = "rsptx/configuration", from = "../../components" },
  { include = "rsptx/data_types", from = "../../components" },
  { include = "rsptx/db", from = "../../components" },
  { include = "rsptx/endpoint_validators", from = "../../components" },
  { include = "rsptx/exceptions", from = "../../components" },
  { include = "rsptx/logging", from = "../../components" },
  { include = "rsptx/lti1p3", from = "../../components" },
  { include = "rsptx/response_helpers", from = "../../components" },
  { include = "rsptx/templates", from = "../../components" },
  { include = "rsptx/validation", from = "../../components" },
]

exclude = [
    "**/node_modules/*",
    "**/out/*",
    "**/build/*",
    "**/react/runestone/*",
    "**/public/runestone/*",
    "**/.ruff_cache/*",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.11"
aioredis = "^2.0.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.7"
fastapi-login = "^1.9.0"
gunicorn = "^20.1.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
jwcrypto = "^1.5.6"
psycopg2-binary = "^2.9.10"
pydal = ">=20230521.1"
pydantic-settings = "^2.0.3"
pyhumps = "^3.8.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.5"
pyjwt = "^2.10.1"
pytz = "^2024.2"
redis = "^4.3.4"
sqlalchemy = "^2.0.0"
uvicorn = "^0.27.0"
werkzeug = "<3.1"

# duplicated from admin_server/pyproject.toml
tldextract = "^5.3.0"
[tool.poetry.group.dev.dependencies]
#black = "~= 22.0"
#console-ctrl = "^0.1.0"
#pytest = "^7.0.0"
#flake8 = "^6.0.0"
#sphinx-rtd-theme = "^1.0.0"
# Needed for the ``--install-types --non-interactive`` flags -- see the `mypy release notes <https://mypy-lang.blogspot.com/2021/06/mypy-0910-released.html>`_.
#mypy = "> 0.910"
#coverage = "^6.0.0"
#tox = "^3.0.0"
#selenium = "^3.0.0"
#PyVirtualDisplay = "^3.0"
#polling2 = "^0.5.0"
#pytest-asyncio = "^0.17.0"
#pytest-env = "^0.6.0"
# This is a Runestone Components dependency that's needed when testing PostgreSQL.
#psycopg2-binary = "^2.0.0"
# This is used by VSCode for Python refactoring
#rope = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
