[project]
name = "admin_server"
version = "0.1.0"
description = ""
authors = [{ name = "Brad Miller", email = "bonelake@mac.com" }]
requires-python = ">=3.11,<4"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.11.11,<4",
    "aioredis>=2.0.0,<3",
    "asyncpg>=0.30.0,<0.31",
    "fastapi>=0.115.7,<0.116",
    "fastapi-login>=1.9.0,<2",
    "gunicorn>=20.1.0,<21",
    "httpx>=0.27.0,<0.28",
    "itsdangerous>=2.2.0,<3",
    "jinja2>=3.1.5,<4",
    "jwcrypto>=1.5.6,<2",
    "mistune>=3.0,<4",
    "psycopg2-binary>=2.9.10,<3",
    "pydal>=20230521.1",
    "pydantic-settings>=2.0.3,<3",
    "pyhumps>=3.8.0,<4",
    "python-dateutil>=2.8.2,<3",
    "python-dotenv>=1.0.0,<2",
    "python-multipart>=0.0.5,<0.0.6",
    "pyjwt>=2.10.1,<3",
    "pytz>=2024.2,<2025",
    "redis>=4.3.4,<5",
    "sqlalchemy>=2.0.0,<3",
    "uvicorn>=0.27.0,<0.28",
    "werkzeug<3.1",
    "tldextract>=5.3.0,<6",
    "pandas>=3.0.2,<4",
]

[dependency-groups]
dev = []


[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

# Bricks are force-included at build time by the polylith-bricks hook, so
# there is no package dir named after the project for hatchling's default
# file selection -- hence bypass-selection.
[tool.hatch.build.targets.wheel]
bypass-selection = true
# Mirrors the old poetry `exclude`. The polylith-bricks hook matches with
# Python fnmatch against directory paths, so use the dir form ("**/x"),
# not poetry's "**/x/*".
exclude = [
    "**/node_modules",
    "**/out",
    "**/build",
    "**/react/runestone",
    "**/public/runestone",
    "**/.ruff_cache",
]

[tool.hatch.build.targets.wheel.hooks.polylith-bricks]

# Polylith bricks to bundle into the wheel (replaces poetry's `packages`).
[tool.polylith.bricks]
"../../bases/rsptx/admin_server_api" = "rsptx/admin_server_api"
"../../components/rsptx/auth" = "rsptx/auth"
"../../components/rsptx/configuration" = "rsptx/configuration"
"../../components/rsptx/data_types" = "rsptx/data_types"
"../../components/rsptx/db" = "rsptx/db"
"../../components/rsptx/endpoint_validators" = "rsptx/endpoint_validators"
"../../components/rsptx/exceptions" = "rsptx/exceptions"
"../../components/rsptx/logging" = "rsptx/logging"
"../../components/rsptx/lti1p3" = "rsptx/lti1p3"
"../../components/rsptx/response_helpers" = "rsptx/response_helpers"
"../../components/rsptx/templates" = "rsptx/templates"
"../../components/rsptx/validation" = "rsptx/validation"
