[project]
name = "assignment_server"
version = "0.1.1"
description = ""
authors = [{ name = "Brad Miller", email = "bonelake@mac.com" }]
requires-python = ">=3.10,<4"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aioredis>=2.0.0,<3",
    "aiohttp>=3.11.11,<4",
    "async-timeout>=4.0.0,<5",
    "celery[redis]>=5.0.0,<6",
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.17.0,<0.18",
    "gunicorn>=20.0.0,<21 ; sys_platform != 'win32'",
    "Jinja2<3.1.0",
    "jwcrypto>=1.5.6,<2",
    "aiofiles>=0.8.0,<0.9",
    "alembic>=1.0.0,<2",
    "python-dateutil>=2.0.0,<3",
    "fastapi-login>=1.10.0,<2",
    "pydal>=20210215.1",
    "python-multipart>=0.0.5,<0.0.6",
    "asyncpg>=0.30.0,<0.31",
    "SQLAlchemy>=2.0.0,<3",
    "aiosqlite>=0.17.0,<0.18",
    "redis>=4.0.0,<5",
    "pyhumps>=3.0.0,<4",
    "bleach>=4.0.0,<5",
    "boto3>=1.0.0,<2",
    "multi-await>=1.0.0,<2",
    "botocore>=1.29.87,<2",
    "pyflakes>=3.0.1,<4",
    "pandas>=2.3.0,<3",
    "psycopg2-binary>=2.9.7,<3",
    "pydantic-settings>=2.0.3,<3",
    "pyjwt>=2.0.0,<3",
    "numpy>=2.1.0,<3",
    "cryptography>=46.0.0,<47",
    "greenlet>=3.2.2,<4",
    "requests>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "black~= 22.0",
    "console-ctrl>=0.1.0,<0.2",
    "pytest>=7.0.0,<8",
    "flake8>=6.0.0,<7",
    "sphinx-rtd-theme>=1.0.0,<2",
    "mypy> 0.910",
    "coverage>=6.0.0,<7",
    "tox>=3.0.0,<4",
    "selenium>=3.0.0,<4",
    "PyVirtualDisplay>=3.0,<4",
    "polling2>=0.5.0,<0.6",
    "pytest-asyncio>=0.17.0,<0.18",
    "pytest-env>=0.6.0,<0.7",
    "psycopg2-binary>=2.0.0,<3",
    "rope>=0.21.0,<0.22",
]

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

# The brick files are added at build time by the polylith-bricks hook (via
# force-include); there is no package dir named after the project for
# hatchling's default file-selection heuristic to find, hence bypass-selection.
[tool.hatch.build.targets.wheel]
bypass-selection = true
# Keep heavy frontend source/build artifacts (the assignment_builder React app)
# out of the wheel. Mirrors the old poetry `exclude`. NOTE: the polylith-bricks
# hook matches these with Python fnmatch against directory paths, so patterns
# target the directory itself (e.g. "**/public/runestone") -- a trailing "/*"
# (poetry style) would NOT prune the directory.
exclude = [
    "**/node_modules",
    "**/out",
    "**/build",
    "**/react/runestone",
    "**/public/runestone",
    "**/.ruff_cache",
]

[tool.hatch.build.targets.wheel.hooks.polylith-bricks]

# Polylith bricks to bundle into the wheel (replaces poetry's `packages` list).
[tool.polylith.bricks]
"../../components/rsptx/auth" = "rsptx/auth"
"../../components/rsptx/logging" = "rsptx/logging"
"../../components/rsptx/db" = "rsptx/db"
"../../components/rsptx/validation" = "rsptx/validation"
"../../components/rsptx/configuration" = "rsptx/configuration"
"../../components/rsptx/response_helpers" = "rsptx/response_helpers"
"../../components/rsptx/lp_sim_builder" = "rsptx/lp_sim_builder"
"../../components/rsptx/grading_helpers" = "rsptx/grading_helpers"
"../../components/rsptx/templates" = "rsptx/templates"
"../../components/rsptx/exceptions" = "rsptx/exceptions"
"../../components/rsptx/analytics" = "rsptx/analytics"
"../../components/rsptx/data_types" = "rsptx/data_types"
"../../components/rsptx/endpoint_validators" = "rsptx/endpoint_validators"
"../../bases/rsptx/assignment_server_api" = "rsptx/assignment_server_api"
"../../components/rsptx/lti1p3" = "rsptx/lti1p3"
