[tool.poetry]
name = "author_server"
version = "0.1.0"
description = ""
authors = ['Brad Miller <bonelake@mac.com>']
license = ""

packages = [
    {include = "rsptx/data_extract", from = "../../components"},
    {include = "rsptx/visualization", from = "../../components"},
    {include = "rsptx/db", from = "../../components"},
    {include = "rsptx/forms", from = "../../components"},
    {include = "rsptx/author_server_api", from = "../../bases"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
celery = "^5.2.7"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.0"
pytest = "^7.1.2"
redis = "^4.3.4"
requests = "^2.28.1"
uvicorn = "^0.18.2"
pretext = "^1.0.0"
runestone = ">=6.5.0,<7.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
fastapi-login = "^1.8.2"
myst-parser = "^0.18.0"
sphinx-reredirects = "^0.1.1"
pandas = "^1.0.0"
altair = "^4.2.0"
WTForms = "^3.0.0"
Starlette-WTF = "^0.4.3"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
