[tool.poetry]
name = "author_server"
version = "1.0.1"
description = ""
authors = ['Brad Miller <bonelake@mac.com>']
license = ""

packages = [
    { include = "rsptx/data_extract", from = "../../components" },
    { include = "rsptx/visualization", from = "../../components" },
    { include = "rsptx/db", from = "../../components" },
    { include = "rsptx/forms", from = "../../components" },
    { include = "rsptx/auth", from = "../../components" },
    { include = "rsptx/configuration", from = "../../components" },
    { include = "rsptx/logging", from = "../../components" },
    { include = "rsptx/validation", from = "../../components" },
    { include = "rsptx/response_helpers", from = "../../components" },
    { include = "rsptx/exceptions", from = "../../components" },
    { include = "rsptx/build_tools", from = "../../components" },
    { include = "rsptx/templates", from = "../../components" },
    { include = "rsptx/author_server_api", from = "../../bases" },
    { include = "rsptx/data_types", from = "../../components" },
    { include = "rsptx/endpoint_validators", from = "../../components" },
]

exclude = [
    "**/.DS_Store",
    "**/.ruff_cache/*",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
celery = "^5.2.7"
aiofiles = "^0.8.0"
Jinja2 = "^3.0.0"
pytest = "^7.1.2"
redis = "^4.3.4"
requests = "^2.28.1"
cryptography = "^3.0.0"
uvicorn = "^0.18.2"
pretext = "^2.13.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.3"
fastapi-login = "^1.10.0"
myst-parser = "^1.0.0"
sphinx-reredirects = "^0.1.1"
pandas = "^2.3.0"
altair = "^4.2.0"
WTForms = "^3.0.0"
Starlette-WTF = "^0.4.3"
tqdm = "^4.64.0"
asyncpg = "^0.30.0"
pyhumps = "^3.8.0"
pydal = ">=20230521.1"
runestone = "^7.7.0"
pydantic-settings = "^2.0.3"
standard-imghdr = "^3.13.0"
prefig = {extras = ["text"], version = "^0.3.2"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
