[project]
name = "author_server"
version = "1.0.1"
description = ""
authors = [{ name = "Brad Miller", email = "bonelake@mac.com" }]
requires-python = ">=3.11,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "celery>=5.2.7,<6",
    "aiofiles>=0.8.0,<0.9",
    "Jinja2>=3.0.0,<4",
    "pytest>=7.1.2,<8",
    "redis>=4.3.4,<5",
    "requests>=2.28.1,<3",
    "cryptography>=46.0.0,<47",
    "uvicorn>=0.18.2,<0.19",
    "pretext>=2.36.0,<3",
    "SQLAlchemy>=2.0.0,<3",
    "psycopg2-binary>=2.9.3,<3",
    "fastapi-login>=1.10.0,<2",
    "myst-parser>=1.0.0,<2",
    "sphinx-reredirects>=0.1.1,<0.2",
    "pandas>=2.3.0,<3",
    "altair>=4.2.0,<5",
    "WTForms>=3.0.0,<4",
    "Starlette-WTF>=0.4.3,<0.5",
    "tqdm>=4.64.0,<5",
    "asyncpg>=0.30.0,<0.31",
    "pyhumps>=3.8.0,<4",
    "pydal>=20230521.1",
    "runestone>=7.11.0,<8",
    "pydantic-settings>=2.0.3,<3",
    "standard-imghdr>=3.13.0,<4",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

# The brick files are added at build time by the polylith-bricks hook (via
# force-include); there is no package dir named after the project for
# hatchling's default file-selection heuristic to find, hence bypass-selection.
[tool.hatch.build.targets.wheel]
bypass-selection = true
# Mirror the old poetry `exclude`. The polylith-bricks hook matches these with
# Python fnmatch against directory paths, so target the directory itself
# (e.g. "**/.ruff_cache") rather than poetry's "**/.ruff_cache/*".
exclude = [
    "**/.DS_Store",
    "**/.ruff_cache",
]

[tool.hatch.build.targets.wheel.hooks.polylith-bricks]

# Polylith bricks to bundle into the wheel (replaces poetry's `packages` list).
[tool.polylith.bricks]
"../../components/rsptx/data_extract" = "rsptx/data_extract"
"../../components/rsptx/visualization" = "rsptx/visualization"
"../../components/rsptx/db" = "rsptx/db"
"../../components/rsptx/forms" = "rsptx/forms"
"../../components/rsptx/auth" = "rsptx/auth"
"../../components/rsptx/configuration" = "rsptx/configuration"
"../../components/rsptx/logging" = "rsptx/logging"
"../../components/rsptx/validation" = "rsptx/validation"
"../../components/rsptx/response_helpers" = "rsptx/response_helpers"
"../../components/rsptx/exceptions" = "rsptx/exceptions"
"../../components/rsptx/build_tools" = "rsptx/build_tools"
"../../components/rsptx/templates" = "rsptx/templates"
"../../bases/rsptx/author_server_api" = "rsptx/author_server_api"
"../../components/rsptx/data_types" = "rsptx/data_types"
"../../components/rsptx/endpoint_validators" = "rsptx/endpoint_validators"
